addresses #89 Updates some outdated dependencies, resolves some warnings